# nosqlite

./: .gitignore  Cargo.toml  Makefile  diagram.mdj
backend/: Cargo.toml
backend-api/: Cargo.toml
backend-api/src/: context.rs  lib.rs
backend-api/src/api/: facade.rs  mod.rs
backend-api/src/api/command/: enum.rs  extract.rs  gateway.rs  impls.rs  mod.rs
backend-api/src/api/command/backend_api/: create_database.rs  drop_database.rs  mod.rs  show_databases.rs  use_database.rs  use_schema.rs
backend-api/src/api/command/database/: create_schema.rs  drop_schema.rs  mod.rs  rename_schema.rs  show_schemas.rs  use_schema.rs
backend-api/src/api/command/schema/: create_table.rs  drop_table.rs  mod.rs
backend-api/src/api/command/table/: insert.rs  mod.rs
backend/src/: lib.rs
backend/src/controller/: database.rs  schema.rs  table.rs
backend/src/controller/table/: key_id.rs  mod.rs  select.rs  selector.rs
backend/src/data/: data_allocator.rs  data_storage.rs  mod.rs  row_type.rs
backend/src/data/id/: registry.rs
backend/src/page/: link_struct.rs  mod.rs  page_controller.rs
backend/src/schema/: mod.rs  name.rs
backend/src/schema/column/: primary_key.rs
backend/src/schema/database/: mod.rs
backend/src/schema/table/: mod.rs
backend/src/schema/type/: data_types.rs  mod.rs
ser-storage-derive/: Cargo.toml
ser-storage-derive/src/: lib.rs
ser-storage-derive/tests/: test.rs
serde-storage/: Cargo.toml
serde-storage/src/: error.rs  integration.rs  lib.rs  main.rs
serde-storage/src/de/: error.rs  mod.rs
serde-storage/src/de/decoder/: mod.rs  single_item.rs  storable.rs
serde-storage/src/descriptor/: array.rs  backwards.rs  integer.rs  inventory.rs  mod.rs  struct.rs  type.rs
serde-storage/src/ser/: error.rs  mod.rs  struct.rs
serde-storage/src/ser/descriptor/: integer.rs  inventory.rs  mod.rs  struct.rs  type.rs
serde-storage/src/ser/encoder/: mod.rs  output_descriptor.rs  single_item.rs  storable.rs  storable_integer.rs
src/: main.rs  (+1 more)
(+305 files in other folders)
