workspace = { members = [ "ser-storage-derive","serde-storage"] }
[package]
name = "nosqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-storage = { path = "serde-storage" }
queues = "1.0.2"
smart-default = "0.7.1"
derive_more = "0.99.16"
serde = { version = "1.0.194", features = ["derive"] }
