[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-storage = { path = "../serde-storage" }
common = { path = "../common" }
backend = { path = "../backend" }
smart-default = "0.7.1"
derive_more = "0.99.16"
clap = { version = "4.5.4", features = ["derive"] }
prettytable-rs = "^0.10"