[package]
name = "serde-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-default = "0.7.1"
derive_more = "0.99.16"
serde = { version = "1.0.194", features = ["derive"] }
inventory = "0.3.14"